fixed unexpected behavior for too long repo names

--- a/Application/Views/css/overview.css
+++ b/Application/Views/css/overview.css
@@ -551,6 +551,9 @@ button.control {
   vertical-align: middle;
   padding-top: 15px;
 }
+.subtitle a{
+  word-wrap: break-word;
+}
 .portrait{
   height: 200px;
   background-size: auto 100%;
